<resources>
    <string name="app_name">Services</string>
    <string name="service">Service</string>
    <string name="foreground_service">Foreground service</string>
    <string name="intent_service">Intent service</string>
    <string name="job_dispatcher">Job dispatcher</string>
    <string name="job_intent_service">Job Intent service</string>
    <string name="alarm_manager">Alarm manager</string>
    <string name="work_manager">Work Manager</string>
</resources>